tests/checker/ok/lambda_returns_lambda.can
main = () => Unit {
    List(1, 2, 3)
        .map((Int) => Int { Int.add(1) })
        .map((Int) => Int { Int.mul(2) })
        .length()
        .print()
}
