tests/checker/fail/duplicate_function.can
double = (Int) => Int {
    Int.mul(2)
}

double = (Int) => Int {
    Int.mul(3)
}

Unit => Program {
    2.double().print()
}
